--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">Zacks unblocker</h1>
+    <h1 class="title">Proxy</h1>
     <form method="POST" action="/service/gateway">
       <div class="form-group">
         <label for="url">URL</label>
